--- a/index.html
+++ b/index.html
@@ -3,139 +3,139 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sprint Challenge - Home</title>
 
-	<title>Sprint Challenge - Home</title>
+    <link rel="stylesheet" href="/css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-	<div>
-		<!-- header -->
-		<header>
-			<div>
-				BLOOMTECH BAR AND GRILL
-
-				<!-- nav -->
-				Menu
-				Reservations
-				Special Offers
-				Contact
+	<header>
+		<nav>
+			<h1><a href="index.html"></a>BLOOMTECH BAR AND GRILL</a></h1>
+			<div class="links">
+				<a href="menu.html"> Menu </a>
+				<a href="menu.html"> Reservations </a>
+				<a href="menu.html"> Special Offers </a>
+				<a href="menu.html"> Contact </a>	
 			</div>
-		</header>
-
-		<!-- gallery section -->
-		<section class="gallery">
-			<div>
-				<h2>OUR FOOD</h2>
-
-				img/food-avocadotoast.jpg
-
-				img/food-burger.jpg
-
-				img/food-poutine.jpg
-
-				img/food-ribs.jpg
-
-				img/food-sandwich.jpg
-
-				img/food-sausage.jpg
-
-				img/food-steak.jpg
-
-				img/food-tacos.jpg
-
-				img/food-wings.jpg
+			<div class="social">
+				<a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a><br>
+				<a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a><br>
+				<a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
 			</div>
-		</section>
+		</nav>
+	</header>
 
-		<!-- spacer -->
-		<div class="spacer"></div>
+	<section class="gallery">
+			<h2>OUR FOOD</h2>
+		<div class="food1">
+			<img src="/img/food-avocadotoast.jpg" alt="avocado toast pic">
 
-		<!-- about section -->
-		<section class="about">
-			<div class="about-container">
-				<h2>ABOUT US</h2>
+			<img src="/img/food-burger.jpg" alt="burger pic">
+			
+			<img src="/img/food-poutine.jpg" alt="poutine pic">
+		</div>
+		<div class="food2">
+			<img src="/img/food-ribs.jpg" alt="ribs pic">
+			
+			<img src="/img/food-sandwich.jpg" alt="sandwich pic">
 
-				<div id="cooks" class="pic">
+			<img src="/img/food-sausage.jpg" alt="sausage pic">
+		</div>
+		<div class="food3">
+			<img src="/img/food-steak.jpg" alt="steak pic">
+
+			<img src="/img/food-tacos.jpg" alt="tacos pic">
+
+			<img src="/img/food-wings.jpg" alt="wings pic">
+		</div>
+	</section>
+
+	<div class="spacer"></div>
+
+	<section class="about">
+		<div class="about-container">
+			<h2>ABOUT US</h2>
+
+			<div id="cooks" class="pic">
+			</div>
+
+			<div class="text">
+				<h3>Good Food, Great People</h3>
+				<p>Quis duis aute, shank ut pork eiusmod in ball tip jerky non. Short ribs tail dolore, fatback in
+					tempor meatloaf pig sunt porchetta beef. Ad hamburger pig veniam, andouille exercitation cillum
+					eiusmod doner irure tail burgdoggen rump chislic officia. Pancetta frankfurter sed, est t-bone
+					porchetta capicola id tri-tip cillum cow leberkas do minim. Sausage ea velit boudin laboris
+					dolore
+					short loin corned beef commodo jowl beef dolor tempor. Dolor culpa enim in meatloaf, ham mollit
+					shankle duis chicken dolore andouille do tenderloin qui.</p>
+			</div>
+
+			<div id="bartender" class="pic">
+			</div>
+		</div>
+	</section>
+
+	<div class="spacer"></div>
+
+	<section class="contact">
+		<div class="contact-container">
+			<h2>CONTACT US</h2>
+
+			<div class="info">
+				<div class="address">
+					<h3>Address</h3>
+
+					<address>
+						<p>100 Main St</p>
+						<p>San Francisco, CA</p>
+					</address>
 				</div>
 
-				<div class="text">
-					<h3>Good Food, Great People</h3>
-					<p>Quis duis aute, shank ut pork eiusmod in ball tip jerky non. Short ribs tail dolore, fatback in
-						tempor meatloaf pig sunt porchetta beef. Ad hamburger pig veniam, andouille exercitation cillum
-						eiusmod doner irure tail burgdoggen rump chislic officia. Pancetta frankfurter sed, est t-bone
-						porchetta capicola id tri-tip cillum cow leberkas do minim. Sausage ea velit boudin laboris
-						dolore
-						short loin corned beef commodo jowl beef dolor tempor. Dolor culpa enim in meatloaf, ham mollit
-						shankle duis chicken dolore andouille do tenderloin qui.</p>
-				</div>
+				<div class="hours">
+					<h3>Hours</h3>
 
-				<div id="bartender" class="pic">
-				</div>
-			</div>
-		</section>
-
-		<!-- spacer -->
-		<div class="spacer"></div>
-
-		<!-- contact section -->
-		<section class="contact">
-			<div class="contact-container">
-				<h2>CONTACT US</h2>
-
-				<div class="info">
-					<div class="address">
-						<h3>Address</h3>
-
-						<address>
-							<p>100 Main St</p>
-							<p>San Francisco, CA</p>
-						</address>
+					<div>
+						<p>Sunday to Thursday:</p>
+						<p>12:00p - 12:00a</p>
+						<p>Friday and Saturday:</p>
+						<p>12:00p - 4:00a</p>
 					</div>
+				</div>
 
-					<div class="hours">
-						<h3>Hours</h3>
+				<div class="contacts">
+					<h3>Contacts</h3>
 
-						<div>
-							<p>Sunday to Thursday:</p>
-							<p>12:00p - 12:00a</p>
-							<p>Friday and Saturday:</p>
-							<p>12:00p - 4:00a</p>
-						</div>
-					</div>
-
-					<div class="contacts">
-						<h3>Contacts</h3>
-
-						<div>
-							<a id="phone" href="tel:999-999-9999">999-999-9999</a>
-							<a id="email" href="mailto:restaurant@bloomtech.com">restaurant@bloomtech.com</a>
-						</div>
+					<div>
+						<a id="phone" href="tel:999-999-9999">999-999-9999</a>
+						<a id="email" href="mailto:restaurant@bloomtech.com">restaurant@bloomtech.com</a>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
+	</section>
 
-		<!-- spacer -->
-		<div class="spacer-sm"></div>
+	<div class="spacer-sm"></div>
 
-		<!-- footer -->
-		<footer>
-			<!-- email signup -->
-			Join our mailing list!
-			Sign Up
-			<!-- nav -->
-			Menu
-			Reservations
-			Special Offers
-			Contact
-			<!-- copyright -->
-			©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
-		</footer>
-	</div>
+	<footer>
+		<!-- email signup -->
+		<div class="email">
+		<p>Join our mailing list!</p>
+		<a href="#">Sign Up</a>
+		</div>
+		<!-- nav -->
+		<button><a href="menu.html">Menu</a></button>
+		<button><a href="menu.html">Reservations</a></button>
+		<button><a href="menu.html">Special Offers</a></button>
+		<button><a href="menu.html">Contact</a></button>
+		<!-- copyright -->
+		<p>&copy; 2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</p>
+	</footer>
 </body>
 
 </html>
