--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
 
 <body>
 	<header>
-		<nav>
+		<div class="container-header">
+			<div class="heading">
 			<h1><a href="index.html"></a>BLOOMTECH BAR AND GRILL</a></h1>
-			<div class="links">
+			</div>
+			<nav>
 				<a href="menu.html"> Menu </a>
 				<a href="menu.html"> Reservations </a>
 				<a href="menu.html"> Special Offers </a>
 				<a href="menu.html"> Contact </a>	
-			</div>
+			</nav>
 			<div class="social">
 				<a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a><br>
 				<a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a><br>
 				<a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
 			</div>
-		</nav>
+		</div>
 	</header>
 
 	<section class="gallery">
@@ -123,18 +125,22 @@
 	<div class="spacer-sm"></div>
 
 	<footer>
-		<!-- email signup -->
-		<div class="email">
-		<p>Join our mailing list!</p>
-		<a href="#">Sign Up</a>
+		<div class="container-footer">
+			<div class="email">
+			<p>Join our mailing list!</p>
+			<input type="email" placeholder="Email Address" id="footer-email">
+			<input type="submit" value="Sign Up" id="footer-email-btn">
+			</div>
+			<nav>
+			<a href="menu.html">Menu</a>
+			<a href="menu.html">Reservations</a>
+			<a href="menu.html">Special Offers</a>
+			<a href="menu.html">Contact</a>
+			</nav>
 		</div>
-		<!-- nav -->
-		<button><a href="menu.html">Menu</a></button>
-		<button><a href="menu.html">Reservations</a></button>
-		<button><a href="menu.html">Special Offers</a></button>
-		<button><a href="menu.html">Contact</a></button>
-		<!-- copyright -->
-		<p>&copy; 2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</p>
+		<div class="copyright">
+			<p>&copy; 2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</p>
+			</div>
 	</footer>
 </body>
 
