--- a/menu.html
+++ b/menu.html
@@ -7,137 +7,143 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sprint Challenge - Menu</title>
 
+    <link rel="stylesheet" href="/css/menu.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div>
-        <header>
-           <h1>BLOOMTECH BAR AND GRILL</h1>
-           <nav>
-            <button><a href="menu.html">Menu</a></button>
-            <button><a href="menu.html">Reservations</a></button>
-            <button><a href="menu.html">Special Offers</a></button>
-            <button><a href="menu.html">Contact</a></button>
-            <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
-            </nav>
-        </header>
+    <header>
+		 <div class="container-header">
+			<div class="heading">
+			<h1><a href="index.html"></a>BLOOMTECH BAR AND GRILL</a></h1>
+			</div>
+			 <nav>
+				<a href="menu.html"> Menu </a>
+				<a href="menu.html"> Reservations </a>
+			 	<a href="menu.html"> Special Offers </a>
+			 	<a href="menu.html"> Contact </a>	
+		    </nav>
+		    <div class="social">
+		    	<a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a><br>
+		    	<a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a><br>
+		    	<a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+			</div>
+	    </div>
+    </header>
 
-        <div class="spacer"></div>
+      <div class="spacer"></div>
 
-        <article class="menu">
+     <article class="menu">
+        <div class="menu-container">
             <h1>Food & Drink</h1>
-            
+
+             <div class="Drinks">
             <h4>Drinks</h4>
             <p>
                 Soda<br>
                 $2<br>
                 Coke products
             </p>
-
             <p>
                 Coffee<br>
                 $2<br>
                 Cream and sugar available upon request
             </p>
-
             <p>
                 Beer<br>
                 $5<br>
                 Delicious and refreshing
             </p>
-
             <p>
                 Wine<br>
                 $5<br>
                 Light and fruity
             </p>
-
             <p>
                 Cocktail<br>
                 $10<br>
                 Ask about our specials
             </p>
+            </div>
 
+            <div class="Appetizers">
             <h4>Appetizers</h4>
             <p>
                 Fried Pickles<br>
                 $6<br>
                 Golden and crispy with tang! (V)
             </p>
-
             <p>
                 Buffalo Wings<br>
                 $10<br>
                 5 wings per order; mild, medium, or hot sauce and served with bleu cheese/ranch and carrot sticks (GF)
             </p>
-
             <p>
                 Poutine<br>
                 $5<br>
                 Homemade fries topped with everything but the kitchen sink
             </p>
+            </div>
 
+            <div class="Salad">
             <h4>Soup and Salad</h4>
             <p>
                 House Salad<br>
                 $8<br>
                 Spinach and arugala with all the good veggies; add chicken for $6 (GF, V)
             </p>
-
             <p>
                 French Onion Soup<br>
                 $4<br>
                 Served with a thick topping of cheese and delicious bread
             </p>
-
             <p>
                 Cheddar Broccoli Soup<br>
                 $5<br>
                 Creamy and filling (GF)
             </p>
+            </div>
 
+            <div class="Entrees">
             <h4>Entrees</h4>
             <p>
                 Ribeye Steak<br>
                 $32<br>
                 Served with mashed potatoes and roasted asparagus
             </p>
-
             <p>
                 Big Boy Burger<br>
                 $14<br>
                 Beef or black bean burger on homemade bun served with fries<br>
                 Black Bean Burger: (V)
             </p>
-
             <p>
                 Pork Shortrib<br>
                 $18<br>
                 Melt off the bone finger food (GF)
             </p>
+            </div>
 
+            <div class="Desserts">
             <h4>Desserts</h4>
             <p>
                 Flourless Chocolate Cake<br>
                 $7<br>
                 Gooey and chocolatey heaven (GF)
             </p>
-
             <p>
                 Cookies and Ice Cream<br>
                 $6<br>
                 Choose 2 cookies and 1 scoop of ice cream from an assortment
             </p>
-
             <p>
                 Creme Brulee<br>
                 $8<br>
                 Crispy scorched top containing a perfect, smooth custard (GF)
             </p>
+            </div>
+        </div>
         </article>
 
         <!-- spacer -->
@@ -156,7 +162,6 @@
 			<!-- copyright -->
 			<p>&copy; 2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</p>
 		</footer>
-    </div>
 </body>
 
 </html>
