--- a/menu.html
+++ b/menu.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sprint Challenge - Menu</title>
-
-    <link rel="stylesheet" href="/css/menu.css">
+    
+    <link rel="stylesheet" href="css/menu.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
 </head>
@@ -32,136 +32,170 @@
 	    </div>
     </header>
 
-      <div class="spacer"></div>
+    <div class="spacer"></div>
 
-     <article class="menu">
-        <div class="menu-container">
-            <h1>Food & Drink</h1>
+ <article class="menu">
+        
+    <div class="menu-container">
+        <h1>Food & Drink</h1>
 
-             <div class="Drinks">
+         <div class="menu-section-Drinks">
             <h4>Drinks</h4>
-            <p>
-                Soda<br>
-                $2<br>
-                Coke products
-            </p>
-            <p>
-                Coffee<br>
-                $2<br>
-                Cream and sugar available upon request
-            </p>
-            <p>
-                Beer<br>
-                $5<br>
-                Delicious and refreshing
-            </p>
-            <p>
-                Wine<br>
-                $5<br>
-                Light and fruity
-            </p>
-            <p>
-                Cocktail<br>
-                $10<br>
-                Ask about our specials
-            </p>
+
+             <div class="menu-item-soda">
+                <h4>Soda</h4>
+                <h4>$2</h4>
+                <p>Coke products</p>
+              </div>
+
+            <div class="menu-item-coffee">
+                <h4>Coffee></h4>
+                <h4>$2</h4>
+                <p>Cream and sugar available upon request</p>
             </div>
 
-            <div class="Appetizers">
-            <h4>Appetizers</h4>
-            <p>
-                Fried Pickles<br>
-                $6<br>
-                Golden and crispy with tang! (V)
-            </p>
-            <p>
-                Buffalo Wings<br>
-                $10<br>
-                5 wings per order; mild, medium, or hot sauce and served with bleu cheese/ranch and carrot sticks (GF)
-            </p>
-            <p>
-                Poutine<br>
-                $5<br>
-                Homemade fries topped with everything but the kitchen sink
-            </p>
+            <div class="menu-item-beer">
+                <h4>Beer</h4>
+                <h4>$5</h4>
+                <p>Delicious and refreshing</p>
             </div>
 
-            <div class="Salad">
-            <h4>Soup and Salad</h4>
-            <p>
-                House Salad<br>
-                $8<br>
-                Spinach and arugala with all the good veggies; add chicken for $6 (GF, V)
-            </p>
-            <p>
-                French Onion Soup<br>
-                $4<br>
-                Served with a thick topping of cheese and delicious bread
-            </p>
-            <p>
-                Cheddar Broccoli Soup<br>
-                $5<br>
-                Creamy and filling (GF)
-            </p>
+            <div  class="menu-item-wine">
+                <h4>Wine</h4>
+                <h4>$5</h4>
+                <p>Light and fruity</p>
             </div>
 
-            <div class="Entrees">
-            <h4>Entrees</h4>
-            <p>
-                Ribeye Steak<br>
-                $32<br>
-                Served with mashed potatoes and roasted asparagus
-            </p>
-            <p>
-                Big Boy Burger<br>
-                $14<br>
-                Beef or black bean burger on homemade bun served with fries<br>
-                Black Bean Burger: (V)
-            </p>
-            <p>
-                Pork Shortrib<br>
-                $18<br>
-                Melt off the bone finger food (GF)
-            </p>
-            </div>
-
-            <div class="Desserts">
-            <h4>Desserts</h4>
-            <p>
-                Flourless Chocolate Cake<br>
-                $7<br>
-                Gooey and chocolatey heaven (GF)
-            </p>
-            <p>
-                Cookies and Ice Cream<br>
-                $6<br>
-                Choose 2 cookies and 1 scoop of ice cream from an assortment
-            </p>
-            <p>
-                Creme Brulee<br>
-                $8<br>
-                Crispy scorched top containing a perfect, smooth custard (GF)
-            </p>
+            <div class ="menu-item-cocktail">
+                <h4>Cocktail</h4>
+                <h4>$10</h4>
+                <p>Ask about our specials</p>
             </div>
         </div>
-        </article>
+
+        <div class="menu-section-Appetizers">
+
+            <h4>Appetizers</h4>
+
+            <div class ="menu-item-pickles">
+                <h4>Fried Pickles</h4>
+                <h4>$6</h4>
+                <p>Golden and crispy with tang!</p>
+                <p>(V)</p>
+            </div>
+
+            <div class="menu-item-wings">
+                <h4>Buffalo Wings</h4>
+                <h4>$10</h4>
+                <p>5 wings per order; mild, medium, or hot sauce and served with bleu cheese/ranch and carrot sticks</p>
+                <p>(GF)</p>
+            </div>
+
+            <div class="menu-item-poutine">
+                <h4>Poutine</h4>
+                <h4>$5</h4>
+                <p>Homemade fries topped with everything but the kitchen sink</p>
+            </div>
+        </div>
+
+        <div class="menu-section-salad">
+
+            <h4>Soup and Salad</h4>
+
+            <div class="menu-item-salad">
+                <h4>House Salad</h4>
+                <h4>$8</h4>
+                <p>Spinach and arugala with all the good veggies; add chicken for $6</p>
+                <p>(GF, V)</p>
+            </div>
+
+            <div class="menu-item-onion-soup">
+                <h4>French Onion Soup</h4>
+                <h4>$4</h4>
+                <p>Served with a thick topping of cheese and delicious bread</p>
+            </div>
+
+            <div class="menu-item-cheddar-soup">
+                <h4>Cheddar Broccoli Soup</h4>
+                <h4>$5</h4>
+                <p>Creamy and filling</p>
+                <p>(GF)</p>
+            </div>
+        </div>
+
+        <div class="menu-section-entrees">
+
+            <h4>Entrees</h4>
+
+            <div class="menu-item-steak">
+                <h4>Ribeye Steak</h4>
+                <h4>$32</h4>
+                <p>Served with mashed potatoes and roasted asparagus</p>
+            </div>
+
+            <div class="menu-item-burger">
+                <h4>Big Boy Burger</h4>
+                <h4>$14</h4>
+                <p>Beef or black bean burger on homemade bun served with fries</p>
+                <p>Black Bean Burger: (V)</p>
+            </p>
+
+            <div class="menu-item-pork">
+                <h4>Pork Shortrib</h4>
+                <h4>$18</h4>
+                <p>Melt off the bone finger food</p>
+                <p>(GF)</p>
+            </div>
+        </div>
+
+        <div class="menu-section-desserts">
+
+            <h4>Desserts</h4>
+
+            <div class="menu-item-cake">
+                <h4>Flourless Chocolate Cake</h4>
+                <h4>$7</h4>
+                <p>Gooey and chocolatey heaven</p>
+                <p>(GF)</p>
+            </div>
+
+            <div class="menu-item-cookies">
+                <h4>Cookies and Ice Cream</h4>
+                <h4>$6</h4>
+                <p>Choose 2 cookies and 1 scoop of ice cream from an assortment</p>
+            </div>
+
+            <div class="menu-item-creme">
+                <h4>Creme Brulee</h4>
+                <h4>$8</h4>
+                <p>Crispy scorched top containing a perfect, smooth custard</p>
+                <p>(GF)</p>
+            </div>
+        </div>
+    </div>
+</article>
 
         <!-- spacer -->
         <div class="spacer-sm"></div>
 
-        <!-- footer -->
         <footer>
-			<!-- email signup -->
-			<p>Join our mailing list!</p>
-			<a href="#">Sign Up</a>
-			<!-- nav -->
-			<a href="menu.html">Menu</a>
-			<a href="menu.html">Reservations</a>
-			<a href="menu.html">Special Offers</a>
-			<a href="menu.html">Contact</a>
-			<!-- copyright -->
-			<p>&copy; 2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</p>
-		</footer>
-</body>
+            <div class="container-footer">
+                <div class="email">
+                <p>Join our mailing list!</p>
+                <input type="email" placeholder="Email Address" id="footer-email">
+                <input type="submit" value="Sign Up" id="footer-email-btn">
+                </div>
+                <nav>
+                <a href="menu.html">Menu</a>
+                <a href="menu.html">Reservations</a>
+                <a href="menu.html">Special Offers</a>
+                <a href="menu.html">Contact</a>
+                </nav>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</p>
+                </div>
+        </footer>
+    </body>
 
 </html>
