finished codegrade project

--- a/index.html
+++ b/index.html
@@ -7,31 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sprint Challenge - Home</title>
 
-    <link rel="stylesheet" href="/css/index.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
+	<link rel="stylesheet" href="css/index.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
 	<header>
-		<div class="container-header">
-			<div class="heading">
-			<h1><a href="index.html"></a>BLOOMTECH BAR AND GRILL</a></h1>
+		<h1><a href="index.html">BLOOMTECH BAR AND GRILL</a></h1>
+		<nav>
+			<div>
+				<a href="menu.html">Menu</a>
+				<a href="menu.html">Reservations</a>
+				<a href="menu.html">Special Offers</a>
+				<a href="menu.html">Contact</a>	
 			</div>
-			<nav>
-				<a href="menu.html"> Menu </a>
-				<a href="menu.html"> Reservations </a>
-				<a href="menu.html"> Special Offers </a>
-				<a href="menu.html"> Contact </a>	
-			</nav>
-			<div class="social">
 				<a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a><br>
 				<a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a><br>
 				<a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
-			</div>
-		</div>
-	</header>
+			
+    </nav>
+</header>
+
 
 	<section class="gallery">
 			<h2>OUR FOOD</h2>
@@ -127,7 +125,7 @@
 			<div class="email">
 			<p>Join our mailing list!</p>
 			<input type="email" placeholder="Email Address" id="footer-email">
-			<input type="submit" value="Sign Up" id="footer-email-btn">
+			<button type="submit" id="footer-email-btn">Sign Up</button>
 			</div>
 			<nav>
 			<a href="menu.html">Menu</a>
