--- a/menu.html
+++ b/menu.html
@@ -14,108 +14,102 @@
 
 <body>
     <header>
-		 <div class="container-header">
-			<div class="heading">
-			<h1><a href="index.html"></a>BLOOMTECH BAR AND GRILL</a></h1>
+		<h1><a href="index.html">BLOOMTECH BAR AND GRILL</a></h1>
+		<nav>
+			<div>
+				<a href="menu.html">Menu</a>
+				<a href="menu.html">Reservations</a>
+				<a href="menu.html">Special Offers</a>
+				<a href="menu.html">Contact</a>	
 			</div>
-			 <nav>
-				<a href="menu.html"> Menu </a>
-				<a href="menu.html"> Reservations </a>
-			 	<a href="menu.html"> Special Offers </a>
-			 	<a href="menu.html"> Contact </a>	
-		    </nav>
-		    <div class="social">
-		    	<a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a><br>
-		    	<a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a><br>
-		    	<a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
-			</div>
-	    </div>
-    </header>
+				<a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a><br>
+				<a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a><br>
+				<a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+			
+    </nav>
+</header>
 
     <div class="spacer"></div>
 
  <article class="menu">
-        
-    <div class="menu-container">
-        <h1>Food & Drink</h1>
 
-         <div class="menu-section-Drinks">
-            <h4>Drinks</h4>
+         <div class="menu-section">
+            <h2>Food & Drinks</h2>
 
-             <div class="menu-item-soda">
+             <div class="menu-item">
                 <h4>Soda</h4>
                 <h4>$2</h4>
                 <p>Coke products</p>
               </div>
 
-            <div class="menu-item-coffee">
+            <div class="menu-item">
                 <h4>Coffee></h4>
                 <h4>$2</h4>
                 <p>Cream and sugar available upon request</p>
             </div>
 
-            <div class="menu-item-beer">
+            <div class="menu-item">
                 <h4>Beer</h4>
                 <h4>$5</h4>
                 <p>Delicious and refreshing</p>
             </div>
 
-            <div  class="menu-item-wine">
+            <div  class="menu-item">
                 <h4>Wine</h4>
                 <h4>$5</h4>
                 <p>Light and fruity</p>
             </div>
 
-            <div class ="menu-item-cocktail">
+            <div class ="menu-item">
                 <h4>Cocktail</h4>
                 <h4>$10</h4>
                 <p>Ask about our specials</p>
             </div>
         </div>
 
-        <div class="menu-section-Appetizers">
+        <div class="menu-section">
 
-            <h4>Appetizers</h4>
+            <h2>Appetizers</h2>
 
-            <div class ="menu-item-pickles">
+            <div class ="menu-item">
                 <h4>Fried Pickles</h4>
                 <h4>$6</h4>
                 <p>Golden and crispy with tang!</p>
                 <p>(V)</p>
             </div>
 
-            <div class="menu-item-wings">
+            <div class="menu-item">
                 <h4>Buffalo Wings</h4>
                 <h4>$10</h4>
                 <p>5 wings per order; mild, medium, or hot sauce and served with bleu cheese/ranch and carrot sticks</p>
                 <p>(GF)</p>
             </div>
 
-            <div class="menu-item-poutine">
+            <div class="menu-item">
                 <h4>Poutine</h4>
                 <h4>$5</h4>
                 <p>Homemade fries topped with everything but the kitchen sink</p>
             </div>
         </div>
 
-        <div class="menu-section-salad">
+        <div class="menu-section">
 
-            <h4>Soup and Salad</h4>
+            <h2>Soup and Salad</h2>
 
-            <div class="menu-item-salad">
+            <div class="menu-item">
                 <h4>House Salad</h4>
                 <h4>$8</h4>
                 <p>Spinach and arugala with all the good veggies; add chicken for $6</p>
                 <p>(GF, V)</p>
             </div>
 
-            <div class="menu-item-onion-soup">
+            <div class="menu-item">
                 <h4>French Onion Soup</h4>
                 <h4>$4</h4>
                 <p>Served with a thick topping of cheese and delicious bread</p>
             </div>
 
-            <div class="menu-item-cheddar-soup">
+            <div class="menu-item">
                 <h4>Cheddar Broccoli Soup</h4>
                 <h4>$5</h4>
                 <p>Creamy and filling</p>
@@ -123,24 +117,24 @@
             </div>
         </div>
 
-        <div class="menu-section-entrees">
+        <div class="menu-section">
 
-            <h4>Entrees</h4>
+            <h2>Entrees</h2>
 
-            <div class="menu-item-steak">
+            <div class="menu-item">
                 <h4>Ribeye Steak</h4>
                 <h4>$32</h4>
                 <p>Served with mashed potatoes and roasted asparagus</p>
             </div>
 
-            <div class="menu-item-burger">
+            <div class="menu-item">
                 <h4>Big Boy Burger</h4>
                 <h4>$14</h4>
                 <p>Beef or black bean burger on homemade bun served with fries</p>
                 <p>Black Bean Burger: (V)</p>
-            </p>
-
-            <div class="menu-item-pork">
+                </div>
+                
+            <div class="menu-item">
                 <h4>Pork Shortrib</h4>
                 <h4>$18</h4>
                 <p>Melt off the bone finger food</p>
@@ -148,31 +142,30 @@
             </div>
         </div>
 
-        <div class="menu-section-desserts">
+        <div class="menu-section">
 
-            <h4>Desserts</h4>
+            <h2>Desserts</h2>
 
-            <div class="menu-item-cake">
+            <div class="menu-item">
                 <h4>Flourless Chocolate Cake</h4>
                 <h4>$7</h4>
                 <p>Gooey and chocolatey heaven</p>
                 <p>(GF)</p>
             </div>
 
-            <div class="menu-item-cookies">
+            <div class="menu-item">
                 <h4>Cookies and Ice Cream</h4>
                 <h4>$6</h4>
                 <p>Choose 2 cookies and 1 scoop of ice cream from an assortment</p>
             </div>
 
-            <div class="menu-item-creme">
+            <div class="menu-item">
                 <h4>Creme Brulee</h4>
                 <h4>$8</h4>
                 <p>Crispy scorched top containing a perfect, smooth custard</p>
                 <p>(GF)</p>
             </div>
         </div>
-    </div>
 </article>
 
         <!-- spacer -->
@@ -183,7 +176,7 @@
                 <div class="email">
                 <p>Join our mailing list!</p>
                 <input type="email" placeholder="Email Address" id="footer-email">
-                <input type="submit" value="Sign Up" id="footer-email-btn">
+                <button id="footer-email-btn">Sign Up</button>
                 </div>
                 <nav>
                 <a href="menu.html">Menu</a>
